--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 <script>
-  var socket = io.connect('http://localhost:8080');
+  var socket = io.connect(window.location.hostname);
   fromX = null
   socket.on('connect', function(){
     // call the server-side function 'adduser' and send one parameter (value of prompt)
