--- a/index.html
+++ b/index.html
@@ -6,79 +6,20 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 
+<script src="https://s3.amazonaws.com/big-canvas/assets/js/helpers.js"></script>
+<script src="https://s3.amazonaws.com/big-canvas/assets/js/sockets.js"></script>
+<script src="https://s3.amazonaws.com/big-canvas/assets/js/interface.js"></script>
+
 <script src="https://s3.amazonaws.com/big-canvas/assets/js/room.js"></script>
 <script src="https://s3.amazonaws.com/big-canvas/assets/js/big-canvas.js"></script>
 
-<link rel="stylesheet" media="screen" type="text/css" href="https://s3.amazonaws.com/big-canvas/assets/css/colorpicker.css" />
-<script type="text/javascript" src="https://s3.amazonaws.com/big-canvas/assets/js/colorpicker.js"></script>
+<link rel="stylesheet" media="screen" type="text/css" href="https://s3.amazonaws.com/big-canvas/assets/css/spectrum.css" />
+<script type="text/javascript" src="https://s3.amazonaws.com/big-canvas/assets/js/spectrum.js"></script>
 
 <script>
-// put into another file
-	var socket = io.connect(window.location.hostname);
-  socket.on('connect', function(){
-    console.log("connected")
-  });
-  socket.on('start', function(x, y) {
-  	$(function() {
-			BC.initialize(x, y);
-  	});
-  });
+$(function() {
+})
 
-	socket.on('updatecanvas', function(roomID, style, history) {
-		var parsedID = roomID.slice(1).split('y');
-		var room = BC.findRoom(parseInt(parsedID[0]), parseInt(parsedID[1]))
-
-		room.drawHistory(style, history);
-	})
-
-	socket.on('loadhistory', function(roomID, url) {
-		var parsedID = roomID.slice(1).split('y');
-		var room = BC.findRoom(parseInt(parsedID[0]), parseInt(parsedID[1]))
-		room.loadURL(url);
-	});
-
-	socket.on('drawPath', function(roomID, style, history) {
-		var parsedID = roomID.slice(1).split('y');
-		var room = BC.findRoom(parseInt(parsedID[0]), parseInt(parsedID[1]))
-		room.drawPath(style, history);
-	});
-
-  $(function() {
-  	// move to interface.js file
-  	$('#size-picker').change(function() {
-  		BC.style.width = $('#size-picker').val();
-  	});
-  	$('#color-picker').val('#000000');
-
-	  $('#color-picker').ColorPicker({
-			onBeforeShow: function () {
-				$('#color-picker').ColorPickerSetColor(this.value);
-			},
-			onSubmit: function(hsb, hex, rgb, el) {
-				$(el).val(rgb);
-				BC.style.color = "rgb(" + rgb.r + "," + rgb.g + "," + rgb.b + "," + "0.5" + ")";
-				$(el).ColorPickerHide();
-			},
-			onChange: function (hsb, hex, rgb) {
-				console.log(rgb)
-				$('#color-picker').val('#' + hex);
-				BC.style.color = "rgba(" + rgb.r + "," + rgb.g + "," + rgb.b + "," + "0.5" + ")";
-				console.log(BC.style.color);
-			}
-	  });	
-	  // move
-		$('#viewport').width(window.innerWidth);
-		$('#viewport').height(window.innerHeight - 30);
-
-		$('#menu').width(window.innerWidth);
-
-		$(window).resize(function() {
-			$('#viewport').width(window.innerWidth);
-			$('#viewport').height(window.innerHeight - 30);
-
-			$('#menu').width(window.innerWidth);
-		});
-  });
 </script>
 </head>
 <body>
@@ -88,8 +29,16 @@
 		<div id="menu-options">
 			<label for="color-picker">color:</label>
 			<input type="text" id="color-picker"></input>
-			<label for="size-picker">brush size:</label>
+
+			<label for="size-picker"><u>s</u>ize:</label>
 			<input type="number" step="1" value="5" min="0" id="size-picker"></input>
+
+			<label for="size-picker"><u>b</u>rush:</label>
+			<select id="brush-picker">
+				<option value="round">round</option>
+				<option value="square">square</option>
+			</select>
+			right-click drag to move
 		</div>
 	</div>
 	<div id="viewport">
