--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ $(function() {
 				</select>
 			</div>
 			<div class="instructions">
-				right-click drag to move, hold ctrl to erase
+				<span id="logo">(a <u>really</u> big canvas)</span>
 			</div>
 		</div>
 	</div>
