minor change to styling and add eyedropper tool

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ $(function() {
 				</select>
 			</div>
 			<div class="instructions">
-				about <span id="logo">(a <u>really</u> big canvas)</span>
+				<span id="about">about</span> <span id="logo">(a <u>really</u> big canvas)</span>
 			</div>
 		</div>
 	</div>
