--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@ $(function() {
 					<option value="square">square</option>
 				</select>
 			</div>
+			<div class="option">
+				go to: (
+				<label for="x-picker" ><u>x</u>:</label>
+				<input type="number" step="1" id="x-picker" class="coord-picker"></input>
+				<label for="y-picker"><u>y</u>:</label>
+				<input type="number" step="1" id="y-picker" class="coord-picker"></input>
+				)
+			</div>
 			<div class="instructions">
 				<span id="about">about</span> <span id="logo">(a <u>really</u> big canvas)</span>
 			</div>
